<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/confUseExactUntil_list_titles"
        android:entryValues="@array/confUseExactUntil_list_values"
        android:key="@string/confUseExactUntil_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/confUseExactUntil" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/confTravelMode_list_titles"
        android:entryValues="@array/confTravelMode_list_values"
        android:key="@string/confTravelMode_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/confTravelMode" />
    <ListPreference
        android:defaultValue="19"
        android:entries="@array/confZoom_list_titles"
        android:entryValues="@array/confZoom_list_values"
        android:key="@string/confZoom_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/confZoom" />
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/confPositionInterval_list_titles"
        android:entryValues="@array/confPositionInterval_list_values"
        android:key="@string/confPositionInterval_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/confPositionInterval" />
    <ListPreference
        android:defaultValue="5"
        android:entries="@array/confZoomInterval_list_titles"
        android:entryValues="@array/confZoomInterval_list_values"
        android:key="@string/confZoomInterval_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/confZoomInterval" />
    <ListPreference
        android:defaultValue="10"
        android:entries="@array/confNavHistory_list_titles"
        android:entryValues="@array/confNavHistory_list_values"
        android:key="@string/confNavHistory_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/confNavHistory" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/confLang_list_titles"
        android:entryValues="@array/confLang_list_values"
        android:key="@string/confLang_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/confLang" />
    <!--<ListPreference-->
        <!--android:defaultValue="2"-->
        <!--android:entries="@array/confDirectionTime_list_titles"-->
        <!--android:entryValues="@array/confDirectionTime_list_values"-->
        <!--android:key="@string/confDirectionTime_list"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="@string/confDirectionTime" />-->
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/confDistanceTime_list_titles"
        android:entryValues="@array/confDistanceTime_list_values"
        android:key="@string/confDistanceTime_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/confDistanceTime" />
</PreferenceScreen>

    <!--private int confUseExactUntil = 0;-->
    <!--private int confTravelMode = 0; // 0 - walking, 1 - driving-->
    <!--private int confZoom = 0;-->
    <!--private int confPositionInterval = 0;-->
    <!--private int confZoomInterval = 0;-->
    <!--private int confNavHistory = 0;-->
    <!--private int confLang = 0; // 0 - english, 1 - hu, 2 - ro-->
    <!--private int confDirectionTime = 0; // 0 - 12:00, 1 - 16:00, 2 - 8:00, 3 - 20:00, 4 - 00:00-->
    <!--private int confDistanceTime = 0; // 0 - distance, 1 - time-->